set(the_description "Analyses")
add_library(beauty_analyse analyse.c ast.c)
set_target_properties(beauty_analyse PROPERTIES SOVERSION 1)
set_target_properties(beauty_analyse PROPERTIES VERSION "1.0.0")
target_link_libraries(beauty_analyse )
target_include_directories(beauty_analyse PRIVATE "${libbeauty_INCLUDE_DIRS}")
install (TARGETS beauty_analyse DESTINATION lib/beauty)
