set(the_description "Output CFG")
#libbeauty_define_module(beauty_output_cfg)
add_library(beauty_output_cfg output_cfg_dot.c output_label.c print_inst.c)
target_link_libraries(beauty_output_cfg )
target_include_directories(beauty_output_cfg PRIVATE "${libbeauty_INCLUDE_DIRS}")
#target_include_directories(beauty_output_cfg PRIVATE "/home/jcd/libbeauty/libbeauty/libbeauty/include")
install (TARGETS beauty_output_cfg DESTINATION lib/beauty)
