set(the_description "Output CFG")
add_library(beauty_output_cfg output_cfg_dot.c output_label.c print_inst.c)
set_target_properties(beauty_output_cfg PROPERTIES SOVERSION 1)
set_target_properties(beauty_output_cfg PROPERTIES VERSION "1.0.0")
target_link_libraries(beauty_output_cfg )
target_include_directories(beauty_output_cfg PRIVATE "${libbeauty_INCLUDE_DIRS}")
install (TARGETS beauty_output_cfg DESTINATION lib/beauty)
